--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Boys -- Biography'
 - !lcc 'CT'
+- GITenberg
 tableOfContents: 'Stephen and Nicholas: boy crusaders -- Peter of Haarlem: the boy
   who saved his country -- David: the shepherd boy -- Louis Seventeenth: the boy king
   who never reigned -- Edward the Black Prince: the boy warrior -- Tyrant Tad: the
